# CanISend

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  academic_application_prep_copilot_proposal.md  canisend_v1_proposal.md  deny.toml  pyproject.toml
.codex-plugin/: plugin.json
crates/canisend-cli/: Cargo.toml  build.rs
crates/canisend-cli/src/: main.rs
crates/canisend-cli/tests/: binary_contract.rs  performance_contract.rs
crates/canisend-cli/tests/snapshots/: agent-capabilities.json  agent-context.json
crates/canisend-contracts/: Cargo.toml
crates/canisend-contracts/src/: agent.rs  discovery.rs  domain.rs  lib.rs  primitives.rs  schema.rs  validation.rs  workflow.rs  workspace.rs
crates/canisend-contracts/tests/: envelope.rs  property_contract.rs
crates/canisend-core/: Cargo.toml
crates/canisend-core/src/: lib.rs
crates/canisend-io/: Cargo.toml
crates/canisend-io/src/: candidate.rs  discovery.rs  lib.rs  local.rs  pdf.rs  remote.rs  render.rs
crates/canisend-io/src/discovery/: adapters.rs
crates/canisend-resources/: Cargo.toml  build.rs
crates/canisend-resources/resources/: manifest.json
crates/canisend-resources/resources/agent/claude/: CLAUDE.md
crates/canisend-resources/resources/agent/codex/: AGENTS.md
crates/canisend-resources/resources/agent/generic/: README.md
crates/canisend-resources/resources/examples/: task-complete.json
crates/canisend-resources/resources/prompts/: document-draft.md  document-review.md  evidence-match.md  evidence-normalize.md  job-criteria.md  job-parse.md
crates/canisend-resources/resources/schemas/v2/: agent-context.schema.json  agent-response.schema.json  application-plan-candidate.schema.json  application-plan.schema.json  backup-manifest.schema.json  capabilities.schema.json  criteria.schema.json  criterion.schema.json  discovery-batch.schema.json  discovery-lead.schema.json  document-candidate.schema.json  document-set.schema.json  document.schema.json  evidence-catalog.schema.json  evidence-match-proposals.schema.json  evidence-match.schema.json  evidence-matches.schema.json  evidence-proposals.schema.json  evidence.schema.json  finding.schema.json  job.schema.json  package-export-manifest.schema.json  package-manifest.schema.json  parsed-job.schema.json  profile-source.schema.json  projection-reconcile.schema.json  projection.schema.json  readiness.schema.json  render-manifest.schema.json  rendered-document.schema.json  review-candidate.schema.json  review-disposition-candidate.schema.json  review-findings.schema.json  source.schema.json  task-completion.schema.json  task-descriptor.schema.json  version.schema.json  workflow-status.schema.json  workspace-check.schema.json  workspace-status.schema.json
crates/canisend-resources/resources/templates/: application-document.typ  cover-letter.typ
crates/canisend-resources/src/: lib.rs
crates/canisend-resources/tests/: manifest.rs
crates/canisend-store/: Cargo.toml
crates/canisend-store/migrations/: 0001_initial.sql  0002_job_intake.sql  0003_discovery.sql  0004_agent_tasks.sql  0005_workflow_kernel.sql  0006_profile_sources.sql  0007_evidence_workflow.sql  0008_application_plans.sql  0009_document_heads.sql  0010_review_heads.sql  0011_package_heads.sql  0012_export_projections.sql  0013_render_heads.sql
crates/canisend-store/src/: artifact.rs  backup.rs  blob.rs  context.rs  criteria.rs  database.rs  discovery.rs  document.rs  evidence.rs  job.rs  lib.rs  matching.rs  package.rs  plan.rs  profile.rs  projection.rs  render.rs  review.rs  task.rs  workflow.rs  workspace.rs
crates/canisend-store/tests/: store_contract.rs
docs/: discovery-adapters.md  stage3-migration.md  stage4-migration.md  stage5-migration.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: intake_parsers.rs  pdf_extract.rs  structured_inputs.rs
packaging/: README.md
platform-bridges/: AGENTS.md  CLAUDE.md  GEMINI.md
prompts/: cover_letter_writer.md  criteria_checker.md  cv_tailor.md  job_parser.md  package_builder.md  profile_evidence_augmenter.md  profile_matcher.md  structured_cover_letter_draft.md
release/: ISSUE_COLLECTION.md  KNOWN_LIMITATIONS.md  RELEASE_NOTES.md  beta-contract-freeze.json  beta-readiness.json  documentation-uninstall-policy.json  feature-freeze-exceptions.json  feedback-snapshot.json  package-manager-qualification-policy.json  qualification-ledger.json  release-notes-policy.json  signing-policy.json  stage-transition-policy.json  support-policy.json  targets.json  upgrade-qualification-policy.json
schemas/: agent-response.schema.json  application-brief.schema.json  application-decision.schema.json  application-gate-report.schema.json  application-package-readiness.schema.json  artifact-bundle.schema.json  confirmed-corrections.schema.json  cover-letter-draft.schema.json  criteria.schema.json  criteria_check.schema.json  criterion-matches.schema.json  discovery-cache-v1.schema.json  discovery-import-report-v1.schema.json  discovery-refresh-report-v1.schema.json  discovery-search-v1.schema.json  discovery-sources-v1.schema.json  document-execution-plan.schema.json  document-readiness.schema.json  evidence-catalog.schema.json  fit_report.schema.json  job-lead-v2.schema.json  lead-batch-v1.schema.json  lead-catalog-v1.schema.json  migration-plan.schema.json  migration-receipt.schema.json  migration-rollback-receipt.schema.json  package-review-dispositions.schema.json  package-review-findings.schema.json  parsed_job.schema.json  projection-journal.schema.json  repair-receipt.schema.json  required-document-plan.schema.json  research-statement-draft.schema.json  review-dispositions.schema.json  review-findings.schema.json  run-manifest.schema.json  task-result.schema.json  task-spec.schema.json  (+2 more)
spikes/r0-dependencies/native-probe/: Cargo.toml
spikes/r0-dependencies/native-probe/src/: main.rs
spikes/r0-dependencies/network-probe/: Cargo.toml
spikes/r0-dependencies/network-probe/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+491 files in other folders)
