[workspace]
members = [
    "crates/canisend-cli",
    "crates/canisend-contracts",
    "crates/canisend-core",
    "crates/canisend-io",
    "crates/canisend-resources",
    "crates/canisend-store",
    "xtask",
]
exclude = ["spikes/r0-dependencies"]
resolver = "3"

[workspace.package]
version = "0.7.0-alpha.1"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["Peng Jiaxin"]
repository = "https://github.com/jxpeng98/CanISend"
publish = false

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
hex = "0.4.3"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
