[workspace]
members = [
    "crates/canisend-cli",
    "crates/canisend-contracts",
    "crates/canisend-core",
    "crates/canisend-io",
    "crates/canisend-resources",
    "crates/canisend-store",
    "xtask",
]
exclude = ["spikes/r0-dependencies"]
resolver = "3"

[workspace.package]
version = "0.7.0-rc.1"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["Peng Jiaxin"]
repository = "https://github.com/jxpeng98/CanISend"
publish = false

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
feed-rs = "2.4.0"
hex = "0.4.3"
getrandom = "0.3.4"
html2text = { version = "0.17.1", default-features = false }
jsonschema = { version = "0.48.0", default-features = false }
lopdf = { version = "0.42.0", default-features = false }
pdf-extract = "0.12.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["backup", "bundled"] }
schemars = "1.2.1"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
time = { version = "0.3.53", default-features = false, features = ["formatting", "parsing"] }
toml = "0.8.23"
typst-as-lib = { version = "=0.16.0", default-features = false, features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "=0.15.1"
url = "2.5.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
