[project]
name = "academic-application-prep"
version = "0.1.0"
description = "Local-first academic job application preparation copilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
academic-prep = "academic_prep.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academic_prep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
