[project]
name = "canisend"
version = "0.3.0b1"
description = "Evidence-backed application prep for academic and professional jobs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Peng Jiaxin" },
]
maintainers = [
    { name = "Peng Jiaxin" },
]
keywords = [
    "academic jobs",
    "professional jobs",
    "applications",
    "cli",
    "typst",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "jsonschema>=4.23",
    "packaging>=24.0",
    "pydantic>=2.7",
    "pypdf>=5.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/jxpeng98/CanISend"
Repository = "https://github.com/jxpeng98/CanISend"
Issues = "https://github.com/jxpeng98/CanISend/issues"
Documentation = "https://github.com/jxpeng98/CanISend#readme"

[project.scripts]
canisend = "canisend.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canisend"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "canisend/resources/prompts"
"templates" = "canisend/resources/templates"
"schemas" = "canisend/resources/schemas"
"skills" = "canisend/resources/skills"
".codex-plugin" = "canisend/resources/.codex-plugin"
"agent-skills" = "canisend/resources/agent-skills"
"platform-bridges" = "canisend/resources/platform-bridges"
"examples" = "canisend/resources/examples"
"docs/stage4-migration.md" = "canisend/resources/docs/stage4-migration.md"
".env.example" = "canisend/resources/.env.example"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
