[package]
name = "canisend-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
canisend-contracts = { path = "../crates/canisend-contracts", version = "=0.7.0-rc.1" }
canisend-io = { path = "../crates/canisend-io", version = "=0.7.0-rc.1" }
libfuzzer-sys = "=0.4.13"
serde_json = "=1.0.150"

[[bin]]
name = "structured_inputs"
path = "fuzz_targets/structured_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intake_parsers"
path = "fuzz_targets/intake_parsers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pdf_extract"
path = "fuzz_targets/pdf_extract.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
