[package]
name = "xtask"
description = "Repository automation for Rust-native CanISend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
canisend-contracts = { path = "../crates/canisend-contracts" }
canisend-resources = { path = "../crates/canisend-resources" }
schemars.workspace = true
serde_json.workspace = true

[lints]
workspace = true
