[package]
name = "canisend-cli"
description = "Native CanISend command-line application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "canisend"
path = "src/main.rs"

[dependencies]
canisend-contracts = { path = "../canisend-contracts", version = "=0.7.0-rc.2" }
canisend-core = { path = "../canisend-core", version = "=0.7.0-rc.2" }
canisend-io = { path = "../canisend-io", version = "=0.7.0-rc.2" }
canisend-resources = { path = "../canisend-resources", version = "=0.7.0-rc.2" }
canisend-store = { path = "../canisend-store", version = "=0.7.0-rc.2" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
lopdf.workspace = true

[lints]
workspace = true
