[package]
name = "canisend-contracts"
description = "Versioned public contracts for Rust-native CanISend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
