[package]
name = "canisend-core"
description = "Domain and application services for Rust-native CanISend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
canisend-contracts = { path = "../canisend-contracts", version = "=0.7.0-alpha.1" }
thiserror.workspace = true

[lints]
workspace = true
