[package]
name = "canisend-io"
description = "External I/O adapters for Rust-native CanISend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
canisend-contracts = { path = "../canisend-contracts" }
canisend-core = { path = "../canisend-core" }
csv.workspace = true
html2text.workspace = true
lopdf.workspace = true
pdf-extract.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true

[lints]
workspace = true
