[package]
name = "canisend-io"
description = "External I/O adapters for Rust-native CanISend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
canisend-contracts = { path = "../canisend-contracts", version = "=0.7.0-rc.1" }
canisend-core = { path = "../canisend-core", version = "=0.7.0-rc.1" }
canisend-resources = { path = "../canisend-resources", version = "=0.7.0-rc.1" }
csv.workspace = true
feed-rs.workspace = true
html2text.workspace = true
lopdf.workspace = true
pdf-extract.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
time.workspace = true
typst-as-lib.workspace = true
typst-pdf.workspace = true
url.workspace = true

[lints]
workspace = true
