[package]
name = "canisend-resources"
description = "Embedded resources for Rust-native CanISend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
canisend-contracts = { path = "../canisend-contracts", version = "=0.7.0-rc.1" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[build-dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
