[package]
name = "canisend-store"
description = "Durable storage boundary for Rust-native CanISend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
canisend-contracts = { path = "../canisend-contracts", version = "=0.7.0-beta.1" }
canisend-core = { path = "../canisend-core", version = "=0.7.0-beta.1" }
canisend-io = { path = "../canisend-io", version = "=0.7.0-beta.1" }
getrandom.workspace = true
hex.workspace = true
rusqlite.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true

[lints]
workspace = true
