[package]
name = "canisend-r0-network-probe"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
